--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,7 +69,7 @@
 }
 
 
-canvas {
+#canvas {
   display: block;
   margin: 5px auto; // centers canvas horizontally and adds vertical spacing
   border: 1px solid #ccc;
